--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -727,6 +727,18 @@
   <ItemGroup>
     <None Include="Resources\forward_16x16.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\addgroupheader_16x16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\addgroupheader_32x32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\insert_16x161.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\insert_32x321.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
