--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -98,12 +98,6 @@
     <Compile Include="frmLogin.Designer.cs">
       <DependentUpon>frmLogin.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmConnection.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="frmConnection.Designer.cs">
-      <DependentUpon>frmConnection.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\Component\ComboBoxItem.cs" />
@@ -244,9 +238,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="frmConnection.resx">
-      <DependentUpon>frmConnection.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -741,6 +732,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\greenwhite_16x16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\no_image_512.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\no_image_128.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\no_image_32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\no_image_256.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
