--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -760,6 +760,9 @@
   <ItemGroup>
     <None Include="Resources\picture_box_no_image.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\tickets.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
