--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -129,6 +129,18 @@
     <Compile Include="UI\Modules\ucCaLamViec.Designer.cs">
       <DependentUpon>ucCaLamViec.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\Modules\ucChiPhi.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UI\Modules\ucChiPhi.Designer.cs">
+      <DependentUpon>ucChiPhi.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Modules\ucChiPhiLoai.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UI\Modules\ucChiPhiLoai.Designer.cs">
+      <DependentUpon>ucChiPhiLoai.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\Modules\ucChonPhim.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -268,6 +280,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Modules\ucCaLamViec.resx">
       <DependentUpon>ucCaLamViec.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Modules\ucChiPhi.resx">
+      <DependentUpon>ucChiPhi.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Modules\ucChiPhiLoai.resx">
+      <DependentUpon>ucChiPhiLoai.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Modules\ucChonPhim.resx">
       <DependentUpon>ucChonPhim.cs</DependentUpon>
