--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -782,6 +782,24 @@
   <ItemGroup>
     <None Include="Resources\tickets.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\forward_16x161.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\forward_32x32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\initialstate_16x16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\initialstate_32x32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\forward_16x162.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\forward_32x321.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
