--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\Component\ComboBoxItem.cs" />
+    <Compile Include="UI\Component\ExpenseStatus.cs" />
     <Compile Include="UI\Modules\ucBaoCaoDoanhThu.cs">
       <SubType>UserControl</SubType>
     </Compile>
